v0.5:
	- Added auto modes for chat.
	  Type '/tc' to set town chat mode. All text typed from then on will be sent to town chat.
	  While in a chat mode you can still talk in other channels by using the channel commands eg. '/nc hi'.
	  While in a chat mode you can talk in global chat with '/g text here'.
	  to clear all chat modes '/g'.
	- Added a new permission node for global chat ('/g') of 'towny.chat.global'.
	- Added {worldname} as an accepted entry.
	- Fixed '/g' mode to add formatting.
v0.6:
	- Changed global chat to pass through bukkits chat process instead of our own (allows other plugins to see it again).
v0.7:
	- Added support for Essentials mute and ignore features. Players on ignore will still be seen in town and nation chat.
	- Added craftIRC 3.1 support
	
	  Add a channel tag of 'admin' to the
	  receiving channel in the craftIRC config.
	  
	  Disable Auto paths and add the following to the 'paths:' section

	    - source: 'minecraft'
	      target: 'admin'
	      formatting:
	        chat: '%message%'
	        
	    - source: 'admin'     # These are endpoint tags
	      target: 'minecraft'    #
	      formatting:
	        chat: '%foreground%[%red%%ircPrefix%%sender%%foreground%] %message%'
v0.8:
	- Fixed {townformatted} and {nationformatted} to display correctly.
	- Updated to use new per world channel formats.
v0.9:
	- TownyChat now passes player chat to Dynmap.
v0.10:
	- Code rewrite for new code locations in Towny.
	- Added a spam filter so players can only send one message every two seconds.
	- Added the ability to restrict channel ranges.
	
	  All custom channels (not town or nation) can now have an extra value
	  appended to signify a range limit on chat.
	  
	  -1 = no limits
	   0 = same world only
	  any positive value = limited range (blocks) in the same world.
	  
	  eg. - /g,,,towny.chat.global,-1
	        or a local channel that covers 100 blocks range
	        /l,&f[local],&f,towny.chat.local,100
	  