@@ -1,6 +1,6 @@
 name: TownyChat
 main: com.palmergames.bukkit.TownyChat.Chat
-version: 0.10
+version: 0.11
 author: ElgarL, Shade
 website: http://code.google.com/a/eclipselabs.org/p/towny/
 description: >
